fix broken slideshow code

--- a/property2.html
+++ b/property2.html
@@ -46,21 +46,21 @@
     <div class="container">
       <!-- Slideshow -->
       <div class="slideshow-container">
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/50zYSnMq/beach-house-1.jpg" alt="Property Photo 1" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/dVQCc28w/beach-house-2.jpg" alt="Property Photo 2" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/jjmnfBBS/beach-house-3.jpg" alt="Property Photo 3" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/3xLv8kBp/beach-house-4.jpg" alt="Property Photo 4" />
         </div>
         <!-- Previous/Next controls -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
       </div>
     </div>
 
