--- a/property3.html
+++ b/property3.html
@@ -46,21 +46,21 @@
     <div class="container">
       <!-- Slideshow -->
       <div class="slideshow-container">
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/W37jVkmc/villa-1.jpg" alt="Property Photo 1" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/XNQ3D97w/villa-2.jpg" alt="Property Photo 2" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/ZnKm55jB/villa-3.jpg" alt="Property Photo 3" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/Gt7C8nSM/villa-4.jpg" alt="Property Photo 4" />
         </div>
         <!-- Previous/Next controls -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
       </div>
       </div>
 
