--- a/property4.html
+++ b/property4.html
@@ -46,21 +46,21 @@
     <div class="container">
       <!-- Slideshow -->
       <div class="slideshow-container">
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/j2QDG22D/studio-1.jpg" alt="Property Photo 1" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/sfpGB6m3/studio-2.jpg" alt="Property Photo 2" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/dtwkG2Nr/studio-3.jpg" alt="Property Photo 3" />
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <img src="https://i.postimg.cc/d3K7HrsM/studio-4.jpg" alt="Property Photo 4" />
         </div>
         <!-- Previous/Next controls -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
       </div>
 
       </div>
