--- a/property.html
+++ b/property.html
@@ -143,6 +143,7 @@
       <p>&copy; 2025 Pakasa Real Estate Solutions. All rights reserved.</p>
     </div>
   </footer>
-  
+
+  <script src="./scripts/property.js"></script>
 </body>
 </html>
