--- a/property4.html
+++ b/property4.html
@@ -144,6 +144,7 @@
       <p>&copy; 2025 Pakasa Real Estate Solutions. All rights reserved.</p>
     </div>
   </footer>
-  
+
+  <script src="./scripts/property.js"></script>
 </body>
 </html>
