--- a/property3.html
+++ b/property3.html
@@ -85,24 +85,27 @@
     </div>
   </div>
   
-     <!-- Schedule Viewing Button -->
-     <button id="scheduleBtn" class="schedule-btn">Schedule Viewing</button>
+    <!-- Schedule Viewing Button -->
+    <button id="scheduleBtn" class="schedule-btn">Schedule Viewing</button>
 
-     <!-- Schedule Viewing Modal -->
-     <div id="scheduleModal" class="modal">
-       <div class="modal-content">
-         <span class="close">&times;</span>
-         <h2>Schedule a Viewing</h2>
-         <form id="scheduleForm">
-           <input type="text" name="name" placeholder="Your Name" required />
-           <input type="email" name="email" placeholder="Your Email" required />
-           <input type="date" name="date" required />
-           <input type="time" name="time" required />
-           <textarea name="message" placeholder="Additional Message (Optional)"></textarea>
-           <button type="submit">Submit</button>
-         </form>
-       </div>
-     </div>
+    <!-- Schedule Viewing Modal -->
+    <div id="scheduleModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Schedule a Viewing</h2>
+        <form id="scheduleForm">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <input type="date" name="date" required />
+          <input type="time" name="time" required />
+          <textarea name="message" placeholder="Additional Message (Optional)"></textarea>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+  
+  <!-- Scroll to Top Button -->
+  <button id="scrollToTop" title="Scroll to Top">↑</button>
 
   </section>
 
@@ -145,5 +148,6 @@
   </footer>
 
   <script src="./scripts/property.js"></script>
+  <script src="./scripts/scrollToTop.js"></script>
 </body>
 </html>
